feat(security): optimize and refactor security configuration Refactor and optimize WebSecurityConfig for clarity and maintainability Streamline public endpoint definitions and CORS configuration Ensure stateless session management and secure logout handling Improve bean definitions for authentication and password encoding